2005-03-06  Petr Ovtchenkov  <ptr@island...>

	* stlport/cstdlib, stlport/cmath, stlport/stl/_cmath.h: define
	overloaded functions in the scope of global namespace and than import
	all in stlp_std with 'using' directive. This is better than
	solution from 2005-03-04 below.

	* stlport/cmath: include cstdlib, due to declarations of abs
	with integer types required in overload and then 'using'.

	* src/complex.cpp, src/complex_exp.cpp, src/complex_trig.cpp: replace
	macros that possible will be removed

2005-03-05  Francois Dumont  <dums@stlport...>

	* stlport/stl/_construct.h: Simplification of the _Copy_Construct
	function, now only takes a single template parameter and only call
	the strict copy constructor. Creation of the _Param_Construct function
	that replace the former _Copy_Construct implementation.

	* cstdlib: Fix abs definition for MSVC compilers.

	* test/unit: Fixing 64 bits warnings in many tests.

	* src/c_locale_win32/c_locale_win32.c: Fixing 64 bits warnings.
	
	* src/fstream.cpp: Creation of the INVALID_STLP_FD constant to represent
	a portable invalid file descriptor.

	* stlport/stl/_streambuf.c: Explicit instanciation of basic_streambuf
	for wchar_t removed, already exists in _streambuf.h thanks
	Charlemagne report.

	* stlport/stl/char_traits.h: Setup modification, Windows platform now
	use ptrdiff_t to define streamoff, make the code more portable.

2005-03-04  Petr Ovtchenkov  <ptr@island...>

	* stlport/stl/_cmath.h: removed recursive include of cmath header
	
	* src/complex_impl.h: include cmath instead of stl/_cmath.h

	* stlport/stl/_complex.h: idem.

	* stlport/stl/_valarray.h: idem.

	* test/unit/unary.h: workaround for namespace resolution.

	* test/unit/resolve_name.cpp: test to show problem with namespace resolution.

	* stlport/cmath, stlport/stl/_cmath.h: standard require overloaded math
	functions for double and float arguments. Import with 'using' directive
	can't provide such overload. Removed import with 'using', used direct