@@ -35,33 +35,29 @@
 // returns a reference to a bit, again without doing any range checking.
 
 
-# ifndef _STLP_INTERNAL_ALGOBASE_H
+#ifndef _STLP_INTERNAL_ALGOBASE_H
 #  include <stl/_algobase.h>
-# endif
+#endif
 
-# ifndef _STLP_INTERNAL_ALLOC_H
+#ifndef _STLP_INTERNAL_ALLOC_H
 #  include <stl/_alloc.h>
-# endif
+#endif
 
-# ifndef _STLP_INTERNAL_ITERATOR_H
+#ifndef _STLP_INTERNAL_ITERATOR_H
 #  include <stl/_iterator.h>
-# endif
+#endif
 
-# ifndef _STLP_INTERNAL_UNINITIALIZED_H
+#ifndef _STLP_INTERNAL_UNINITIALIZED_H
 #  include <stl/_uninitialized.h>
-# endif
+#endif
 
-# ifndef _STLP_RANGE_ERRORS_H
+#ifndef _STLP_RANGE_ERRORS_H
 #  include <stl/_range_errors.h>
-# endif
+#endif
 
-# ifndef _STLP_STRING
-#  include <string>
-# endif
-
-# ifndef _STLP_ISTREAM
-#  include <istream>
-# endif
+#ifndef _STLP_INTERNAL_STRING_H
+#  include <stl/_string.h>
+#endif
 
 #define __BITS_PER_WORD (CHAR_BIT*sizeof(unsigned long))
 #define __BITSET_WORDS(__n) ((__n + __BITS_PER_WORD - 1)/__BITS_PER_WORD)
@@ -78,9 +74,9 @@ public:
   static unsigned char _S_first_one(unsigned char);
 };
 
-# if defined (_STLP_USE_TEMPLATE_EXPORT) 
+#if defined (_STLP_USE_TEMPLATE_EXPORT) 
 _STLP_EXPORT_TEMPLATE_CLASS _Bs_G<bool>;
-# endif
+#endif
 
 //
 // Base class: general case.
@@ -152,7 +148,6 @@ struct _Base_bitset {
     }
   }
 
-
   void _M_do_reset() { memset(_M_w, 0, _Nw * sizeof(_WordT)); }
 
   bool _M_is_equal(const _Base_bitset<_Nw>& __x) const {
@@ -190,7 +185,6 @@ struct _Base_bitset {
 //
 // Base class: specialization for a single word.
 //
-
 _STLP_TEMPLATE_NULL
 struct _Base_bitset<1UL> {
   typedef unsigned long _WordT;
@@ -219,7 +213,6 @@ struct _Base_bitset<1UL> {
 
   _WordT& _M_hiword()       { return _M_w; }
   _WordT  _M_hiword() const { return _M_w; }
-
 
   void _M_do_and(const _Self& __x) { _M_w &= __x._M_w; }
   void _M_do_or(const _Self& __x)  { _M_w |= __x._M_w; }
@@ -257,7 +250,6 @@ struct _Base_bitset<1UL> {
 // Definitions of should-be-non-inline functions from the single-word version of
 //  _Base_bitset.
 //
-
 inline size_t 
 _Base_bitset<1UL>::_M_do_find_first(size_t __not_found) const {
   //  typedef unsigned long _WordT;
@@ -318,7 +310,7 @@ _Base_bitset<1UL>::_M_do_find_next(size_t __prev,
 
 template <size_t _Extrabits> struct _Sanitize {
   static void _STLP_CALL _M_do_sanitize(unsigned long& __val)
-    { __val &= ~((~__STATIC_CAST(unsigned long,0)) << _Extrabits); }
+  { __val &= ~((~__STATIC_CAST(unsigned long,0)) << _Extrabits); }
 };
 
 _STLP_TEMPLATE_NULL struct _Sanitize<0UL> {
@@ -403,7 +395,7 @@ public:
 
   bitset(unsigned long __val) : _Base_bitset<_Words>(__val) { _M_do_sanitize(); }
 
-# ifdef _STLP_MEMBER_TEMPLATES
+#if defined (_STLP_MEMBER_TEMPLATES)
   template<class _CharT, class _Traits, class _Alloc>
   explicit bitset(const basic_string<_CharT,_Traits,_Alloc>& __s,
                   size_t __pos = 0)
@@ -551,7 +543,7 @@ public:
 
   unsigned long to_ulong() const { return this->_M_do_to_ulong(); }
 
-#if defined (_STLP_MEMBER_TEMPLATES) && !  defined (_STLP_NO_EXPLICIT_FUNCTION_TMPL_ARGS)
+#if defined (_STLP_MEMBER_TEMPLATES) && !defined (_STLP_NO_EXPLICIT_FUNCTION_TMPL_ARGS)
   template <class _CharT, class _Traits, class _Alloc>
   basic_string<_CharT, _Traits, _Alloc> to_string() const {
     basic_string<_CharT, _Traits, _Alloc> __result;
@@ -613,44 +605,44 @@ public:
 //
 // Definitions of should-be non-inline member functions.
 //
-# if defined (_STLP_MEMBER_TEMPLATES)
+#if defined (_STLP_MEMBER_TEMPLATES)
   template<class _CharT, class _Traits, class _Alloc>
-    void _M_copy_from_string(const basic_string<_CharT,_Traits,_Alloc>& __s,
-                             size_t __pos, size_t __n) {
+  void _M_copy_from_string(const basic_string<_CharT,_Traits,_Alloc>& __s,
+                           size_t __pos, size_t __n) {
 #else
-    void _M_copy_from_string(const string& __s,
-                             size_t __pos, size_t __n) {
-      typedef typename string::traits_type _Traits;
+  void _M_copy_from_string(const string& __s,
+                           size_t __pos, size_t __n) {
+    typedef typename string::traits_type _Traits;
 #endif
-      reset();
-      size_t __tmp = _Nb;
-      const size_t __Nbits = (min) (__tmp, (min) (__n, __s.size() - __pos));
-      for ( size_t __i= 0; __i < __Nbits; ++__i) {
-        typename _Traits::int_type __k = _Traits::to_int_type(__s[__pos + __Nbits - __i - 1]);
-        // boris : widen() ?
-        if (__k == '1')
-          set(__i);
-        else if (__k != '0')
-          __stl_throw_invalid_argument("bitset");
-      }
+    reset();
+    size_t __tmp = _Nb;
+    const size_t __Nbits = (min) (__tmp, (min) (__n, __s.size() - __pos));
+    for ( size_t __i= 0; __i < __Nbits; ++__i) {
+      typename _Traits::int_type __k = _Traits::to_int_type(__s[__pos + __Nbits - __i - 1]);
+      // boris : widen() ?
+      if (__k == '1')
+        set(__i);
+      else if (__k != '0')
+        __stl_throw_invalid_argument("bitset");
     }
+  }
  
-# if defined (_STLP_MEMBER_TEMPLATES)
+#if defined (_STLP_MEMBER_TEMPLATES)
   template <class _CharT, class _Traits, class _Alloc>
-    void _M_copy_to_string(basic_string<_CharT, _Traits, _Alloc>& __s) const
-# else
-    void _M_copy_to_string(string& __s) const
-# endif
-    {
-      __s.assign(_Nb, '0');
+  void _M_copy_to_string(basic_string<_CharT, _Traits, _Alloc>& __s) const
+#else
+  void _M_copy_to_string(string& __s) const
+#endif
+  {
+    __s.assign(_Nb, '0');
       
-      for (size_t __i = 0; __i < _Nb; ++__i) {
-        if (_Unchecked_test(__i))
-          __s[_Nb - 1 - __i] = '1';
-      }
+    for (size_t __i = 0; __i < _Nb; ++__i) {
+      if (_Unchecked_test(__i))
+        __s[_Nb - 1 - __i] = '1';
     }
+  }
 
-# if defined (_STLP_NON_TYPE_TMPL_PARAM_BUG)
+#if defined (_STLP_NON_TYPE_TMPL_PARAM_BUG)
   bitset<_Nb> operator&(const bitset<_Nb>& __y) const {
     bitset<_Nb> __result(*this);
     __result &= __y;
@@ -666,17 +658,14 @@ public:
     __result ^= __y;
     return __result;
   }
-# endif 
-
+#endif 
 };
 
 // ------------------------------------------------------------
 //
 // 23.3.5.3 bitset operations:
 //
-
-# if ! defined (_STLP_NON_TYPE_TMPL_PARAM_BUG)
-
+#if ! defined (_STLP_NON_TYPE_TMPL_PARAM_BUG)
 template <size_t _Nb>
 inline bitset<_Nb>  _STLP_CALL
 operator&(const bitset<_Nb>& __x,
@@ -705,20 +694,34 @@ operator^(const bitset<_Nb>& __x,
   return __result;
 }
 
-#ifndef  _STLP_USE_NO_IOSTREAMS
+#if !defined (_STLP_USE_NO_IOSTREAMS)
 
-#if ! (defined(_STLP_MSVC) || (_STLP_MSVC < 1300)) && ! (defined(__SUNPRO_CC) || (__SUNPRO_CC < 0x500))
+_STLP_END_NAMESPACE
+
+#  if !(defined (_STLP_MSVC) || (_STLP_MSVC < 1300)) && \
+      !(defined(__SUNPRO_CC) || (__SUNPRO_CC < 0x500))
+
+#ifndef _STLP_INTERNAL_IOSFWD
+#  include <stl/_iosfwd.h>
+#endif
+
+_STLP_BEGIN_NAMESPACE
 
 template <class _CharT, class _Traits, size_t _Nb>
 basic_istream<_CharT, _Traits>&  _STLP_CALL
 operator>>(basic_istream<_CharT, _Traits>& __is, bitset<_Nb>& __x);
 
-
 template <class _CharT, class _Traits, size_t _Nb>
 basic_ostream<_CharT, _Traits>& _STLP_CALL
 operator<<(basic_ostream<_CharT, _Traits>& __os, const bitset<_Nb>& __x);
 
-#else
+#  else
+
+#ifndef _STLP_STRING_IO_H
+#  include <stl/_string_io.h> //includes _istream.h and _ostream.h
+#endif
+
+_STLP_BEGIN_NAMESPACE
 
 template <size_t _Nb>
 istream&  _STLP_CALL
@@ -769,7 +772,7 @@ operator<<(ostream& __os, const bitset<_Nb>& __x) {
   return __os << __tmp;
 }
 
-#ifndef _STLP_NO_WCHAR_T
+#    if !defined (_STLP_NO_WCHAR_T)
 
 template <size_t _Nb>
 wistream&  _STLP_CALL
@@ -820,30 +823,25 @@ operator<<(wostream& __os, const bitset<_Nb>& __x) {
   return __os << __tmp;
 }
 
-#endif /* _STLP_NO_WCHAR_T */
-
+#    endif /* _STLP_NO_WCHAR_T */
+#  endif
 #endif
 
-#endif
+#endif /* _STLP_NON_TYPE_TMPL_PARAM_BUG */
 
-# endif /* _STLP_NON_TYPE_TMPL_PARAM_BUG */
-
-#  undef  bitset
-
+#undef  bitset
 
 _STLP_END_NAMESPACE
 
-#  undef __BITS_PER_WORD
-#  undef __BITSET_WORDS
+#undef __BITS_PER_WORD
+#undef __BITSET_WORDS
 
-# if !defined (_STLP_LINK_TIME_INSTANTIATION)
+#if !defined (_STLP_LINK_TIME_INSTANTIATION)
 #  include <stl/_bitset.c>
-# endif
+#endif
 
 #endif /* _STLP_BITSET_H */
-
 
 // Local Variables:
 // mode:C++
 // End:
-
